<resources>
    <string name="app_name">QuizMatematika</string>
    <string name="play">Play</string>
    <string name="viewScore">View Score</string>
    <string name="score">Score: </string>
    <string name="zero">0</string>
    <string name="num1">96</string>
    <string name="operator">+</string>
    <string name="num2">6</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">0</string>
    <string name="erase">ERASE</string>
    <string name="submit">SUBMIT</string>

</resources>